Simplify project setup

--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -6,19 +6,23 @@
 }
 
 @media (min-width: 992px) {
-  h1, h2, .profile-pic {
+  h1,
+  h2,
+  .profile-pic {
     margin-top: 10px;
     margin-bottom: 10px;
   }
 }
 
-.basics-item .icon, .profile-item .icon {
+.basics-item .icon,
+.profile-item .icon {
   position: absolute;
   top: 50%;
   margin-top: -10px;
 }
 
-.basics-item .info, .profile-item .info {
+.basics-item .info,
+.profile-item .info {
   position: relative;
   left: 30px;
   padding-right: 30px;
@@ -45,72 +49,4 @@
   .profile-item .icon-lg {
     font-size: 2em;
   }
-}
-
-.network-github {
-  color: #454545;
-}
-
-.network-twitter {
-  color: #33ccff;
-}
-
-.network-linkedin {
-  color: #007bb6;
-}
-
-.network-skype {
-  color: #12a5f4;
-}
-
-.network-stackoverflow {
-  color: #8e8e92;
-}
-
-.network-soundcloud {
-  color: #e8822d;
-}
-
-.network-pinterest {
-  color: #bd091f;
-}
-
-.network-vimeo {
-  color: #17b3e8;
-}
-
-.network-behance {
-  color: #2c98cf;
-}
-
-.network-codepen {
-  color: #1c1c1c;
-}
-
-.network-foursquare {
-  color: #fa4778;
-}
-
-.network-reddit {
-  color: #545454;
-}
-
-.network-spotify {
-  color: #acd200;
-}
-
-.network-dribbble {
-  color: #ce366f;
-}
-
-.network-facebook {
-  color: #4b6daa;
-}
-
-.network-angellist {
-  color: #000000;
-}
-
-.network-bitbucket {
-  color: #205081;
 }
