--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,7 +1,3 @@
-* {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
 html, body, button {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,14 +6,19 @@ html, body, button {
 
 a[href], button {
   touch-action: manipulation;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-[class^="icon-"], [class*=" icon-"] {
+.icon {
   display: inline-block;
-  font: normal normal normal 14px/1 'icomoon';
-  font-size: inherit;
-  text-rendering: auto;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  vertical-align: text-bottom;
+}
+
+.icon-lg {
+  font-size: 1.33333em;
+  vertical-align: -15%;
 }
 
 html {
@@ -27,7 +28,7 @@ html {
 body {
   min-width: 320px;
   font-size: 16px;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", system-ui, Roboto, "Helvetica Neue", Arial, sans-serif, Apple Color Emoji, "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 300;
   background-color: #e1e8ed;
   color: #292f33;
@@ -62,7 +63,7 @@ h3 {
   text-decoration: none;
 }
 
-.anchor-link:hover, .anchor-link:focus {
+.anchor-link:is(:hover,:focus) {
   text-decoration: none;
 }
 
@@ -78,7 +79,7 @@ h3 {
   content: '#';
 }
 
-.anchor-link:hover .anchor-icon, .anchor-link:focus .anchor-icon {
+.anchor-link:is(:hover,:focus) .anchor-icon {
   display: inline;
   color: rgba(0, 0, 0, 0.5);
   text-decoration: none;
@@ -90,7 +91,7 @@ h3 {
   color: #E1E8ED;
 }
 
-.anchor-link.item-anchor:hover, .anchor-link.item-anchor:focus {
+.anchor-link.item-anchor:is(:hover,:focus) {
   color: #66757f;
 }
 
@@ -135,24 +136,13 @@ hr {
   padding: 8px 15px;
 }
 
-.nav > li > a:hover,
-.nav > li > a:focus {
+.nav > li > a:is(:hover,:focus) {
   outline: none;
   background-color: #e1e8ed;
 }
 
 .nav > li > a:active {
   background-color: #ccd6dd;
-}
-
-.icon-lg {
-  font-size: 1.33333em;
-  line-height: 0.75em;
-  vertical-align: -15%;
-}
-
-.icon-2x {
-  font-size: 2em;
 }
 
 .card-wrapper {
